--- a/main analysis components/synthetic_control_report print results only.Rmd
+++ b/main analysis components/synthetic_control_report print results only.Rmd
@@ -73,20 +73,20 @@ if (!is.null(names(sparse_groups[sparse_groups])) && length(names(sparse_groups[
 
 ##combine estimates
 ```{r Comparison of estimates from different models}
-if (crossval){
-kable( cbind.data.frame(rr_mean_stack_intervals,rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')
-}else{
-kable( cbind.data.frame(rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')  
-}
+#if (crossval){
+kable( cbind.data.frame(rr_mean_allvars_intervals,rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')
+#}else{
+#kable( cbind.data.frame(rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')  
+#}
 ```
 
 ##Plot of Rate ratios, with size proportional to cross validation weights
-```{r fig.width=5, fig.height=3, fig.align = "center", dpi=300, echo=FALSE}
+```{r fig.width=6, fig.height=4, fig.align = "center", dpi=300, echo=FALSE}
 #Compare rate ratios, with size of marker scaled to cross val weights
 		ggplot(rr_mean_combo, aes(x=group.index, y=mean.rr, color=Model,group=Model)) + 
 	  geom_errorbar(aes(ymin=lcl, ymax=ucl), colour="gray", width=.0) +
 	  geom_point(aes(shape=Model, size=est.index))+
-     scale_shape_manual(values=c(15, 16, 17,18))+
+     scale_shape_manual(values=c(15, 16, 17,18, 19))+
 	  scale_size_manual(values=c(point.weights2$value*2)) + #Scales area, which is optimal for bubbl plot
 	  #geom_errorbar(rr_mean_combo,aes(ymin=lcl, ymax=ucl), colour="black", width=.1) +
 	  theme_bw() +
@@ -102,16 +102,13 @@ kable( cbind.data.frame(rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_ti
 	        panel.background = element_blank()) 
 ```
 
-##Weights for each of the models from cross validation
+##Inclusion probabilities from Allvars model
 ```{r Comparison of Cross validation Weights from different models}
-if(crossval){
-kable(stacking_weights.all, align = 'c')
-} else{
-      print("Cross-validation not performed")
-    }
+kable(inclusion_prob_allvars, align = 'c')
+
 ```
   
-##Inclusion Probabilities
+##Inclusion Probabilities from Synthetic Control Model
 ```{r incl, include = FALSE}
 incl_probs <- NULL
 	for (group in groups) {
@@ -132,7 +129,9 @@ kable(incl_probs, align = 'c')
 
 ##Weight Sensitivity Analysis
 ```{r sensitivity}
+if(exists('sensitivity_table_intervals')){
 kable(sensitivity_table_intervals, align = 'c')
+}
 ```
 
 
