--- a/main analysis components/synthetic_control_report print results only.Rmd
+++ b/main analysis components/synthetic_control_report print results only.Rmd
@@ -102,10 +102,19 @@ kable( cbind.data.frame(rr_mean_allvars_intervals,rr_mean_full_intervals,rr_mean
 	        panel.background = element_blank()) 
 ```
 
-##Inclusion probabilities from Allvars model
-```{r Comparison of Cross validation Weights from different models}
-kable(inclusion_prob_allvars, align = 'c')
-
+##Inclusion probabilities from Allvars model inclusion_prob_allvars
+```{r incl, include = FALSE}
+incl_probs <- NULL
+	for (group in groups) {
+	    incl_prob=impact_allvars[[group]]$inclusion_probs[-c(1:(n_seasons-1)),]
+	    incl_prob<- incl_prob[order(-incl_prob$inclusion_probs),]
+	    incl_prob<-incl_prob[c(1:3),]
+	    incl_prob2<-incl_prob[,2]
+	    incl_prob_names=incl_prob[,1]
+			incl_prob3 <- data.frame('Group' = group, 'Greatest Inclusion Variable' = incl_prob_names[1], 'Greatest Inclusion Probability' = incl_prob2[1], 'Second Greatest Inclusion Variable' = incl_prob_names[2], 'Second Greatest Inclusion Probability' = incl_prob2[2], 'Third Greatest Inclusion Variable' = incl_prob_names[3], 'Third Greatest Inclusion Probability' = incl_prob2[3], check.names = FALSE)
+			incl_probs <- rbind(incl_probs, incl_prob3)
+		}
+rownames(incl_probs) <- NULL
 ```
   
 ##Inclusion Probabilities from Synthetic Control Model
