--- a/main analysis components/synthetic_control_report.Rmd
+++ b/main analysis components/synthetic_control_report.Rmd
@@ -75,9 +75,9 @@ if (!is.null(names(sparse_groups[sparse_groups])) && length(names(sparse_groups[
 ##combine estimates
 ```{r Comparison of estimates from different models}
 if (crossval){
-kable( cbind.data.frame(rr_mean_stack_intervals,rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')
+kable( cbind.data.frame(rr_mean_stack_intervals,rr_mean_allvars_intervals,rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')
 }else{
-kable( cbind.data.frame(rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')  
+kable( cbind.data.frame(rr_mean_allvars_intervals,rr_mean_full_intervals,rr_mean_time_intervals,rr_mean_time_no_offset_intervals, rr_mean_pca_intervals), align = 'c')  
 }
 ```
 
@@ -112,6 +112,25 @@ kable(stacking_weights.all, align = 'c')
     }
 ```
   
+##Inclusion probabilities from Allvars model inclusion_prob_allvars
+```{r incl_allvars, include = FALSE}
+incl_probs <- NULL
+	for (group in groups) {
+	    incl_prob=impact_allvars[[group]]$inclusion_probs[-c(1:(n_seasons-1)),]
+	    incl_prob<- incl_prob[order(-incl_prob$inclusion_probs),]
+	    incl_prob<-incl_prob[c(1:3),]
+	    incl_prob2<-incl_prob[,2]
+	    incl_prob_names=incl_prob[,1]
+			incl_prob3 <- data.frame('Group' = group, 'Greatest Inclusion Variable' = incl_prob_names[1], 'Greatest Inclusion Probability' = incl_prob2[1], 'Second Greatest Inclusion Variable' = incl_prob_names[2], 'Second Greatest Inclusion Probability' = incl_prob2[2], 'Third Greatest Inclusion Variable' = incl_prob_names[3], 'Third Greatest Inclusion Probability' = incl_prob2[3], check.names = FALSE)
+			incl_probs <- rbind(incl_probs, incl_prob3)
+		}
+rownames(incl_probs) <- NULL
+```
+
+```{r incl_table_allvars}
+kable(incl_probs, align = 'c')
+```
+
 ##Inclusion Probabilities
 ```{r incl, include = FALSE}
 incl_probs <- NULL
